Replace outdated BrowserControl class